# Telegram_Bot

./: pyproject.toml
telegram_bot/: main.py  parser.py
